Requirement modal design done with responsive

--- a/dashboard.html
+++ b/dashboard.html
@@ -44,7 +44,7 @@
                     <ul class="megamenu-list position-absolute list-inline bg-white pt-8 z-1 start-0">
                         <li class="megamenu-item">
                             <a href="#"
-                                class="megamenu-link fw-semibold fs-13 text-black text-decoration-none px-6 py-4 d-inline-block">Requirements</a>
+                                class="megamenu-link fw-semibold fs-13 text-black text-decoration-none px-6 py-4 d-inline-block" data-bs-target="#requrementmodal" data-bs-toggle="modal">Requirements</a>
                         </li>
                         <li class="megamenu-item">
                             <a href="#"
@@ -4619,6 +4619,77 @@
         </div>
     </div>
     <!-- calender Sent End -->
+
+    <!-- Requirement Modal Start -->
+     <div class="modal contact-c-modal fairbank-m-modal" id="requrementmodal" data-bs-backdrop="static"
+        data-bs-keyboard="false" tabindex="-1" aria-labelledby="requrementmodal" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header justify-content-center position-relative border-0 p-0">
+                    <img src="assets/image/contact-bg.png" alt="Contact" class="img-fluid w-100">
+                    <button type="button" class="btn-close position-absolute top-0 end-0 m-0 mt-8 me-8 z-1"
+                        data-bs-dismiss="modal" aria-label="Close"></button>
+                    <div class="contact-c-ovarly position-absolute">
+                        <img src="assets/image/heading.png" alt="Heading" class="img-fluid">
+                        <h6 class="fs-15 fw-bold mb-0 text-black mt-6 text-center"><em><u>Trucking services</u></em>
+                        </h6>
+                    </div>
+                </div>
+                <div class="modal-body p-0">
+                    <div class="requrement-header nav nav-tabs border-0 py-5 px-15 justify-content-center">
+                        <span class="fs-25 fw-bold text-white">Requirements</span>
+                    </div>
+                    <div class="requirement-content">
+                        <div class="requirement-content-header d-flex justify-content-between">
+                            <div class="requirement-dispatch">
+                                <h3 class="corp-title fs-18 fw-bold text-black"><u>On-duty dispatch:</u></h3>
+                                <div class="requirement-greg mt-10"><img src="assets/image/Messagere.png" alt="Plus Icon" width="30" class="me-15 img-fluid"><span class="text-primary fw-medium">Greg Smith</span></div>
+                            </div>
+                            <div>
+                                <h3 class="corp-title fs-18 fw-bold text-black"><u>Current MSA:</u></h3>
+                                <div><span class="d-inline-block search-item-selected me-16 mt-0 border-0" style="width: 12px;height: 12px;"></span><span class="text-primary fw-medium">Kraken</span></div>
+                                <div><span class="d-inline-block search-item-selected me-16 mt-0 border-0" style="width: 12px;height: 12px;"></span><span class="text-primary fw-medium">Cord</span></div>
+                            </div>
+                        </div>  
+                        <div class="requirement-details p-15">
+                            <div class="d-flex justify-content-between">
+                                <ul class="list-inline">
+                                    <h5 class="fs-18 fw-bold text-center mb-15"><u>Needed:</u></h5>
+                                    <li class="fw-medium text-black d-flex align-items-center"><span class="d-inline-block search-item-selected me-12 bg-black mt-0 border-0" style="width: 12px; height: 12px;"></span>Inspected Truck.</li>
+                                    <li class="fw-medium text-black d-flex align-items-center"><span class="d-inline-block search-item-selected me-12 bg-black mt-0 border-0" style="width: 12px; height: 12px;"></span>Vac Trailer.</li>
+                                    <li class="fw-medium text-black d-flex align-items-center"><span class="d-inline-block search-item-selected me-12 bg-black mt-0 border-0" style="width: 12px; height: 12px;"></span>General liability.</li>
+                                    <li class="fw-medium text-black d-flex align-items-center"><span class="d-inline-block search-item-selected me-12 bg-black mt-0 border-0" style="width: 12px; height: 12px;"></span>5,000,000 umbrella.</li>
+                                    <li class="fw-medium text-black d-flex align-items-center"><span class="d-inline-block search-item-selected me-12 bg-black mt-0 border-0" style="width: 12px; height: 12px;"></span>Dependable drivers</li>
+                                </ul>
+                                <ul class="list-inline">
+                                    <h5 class="fs-18 fw-bold text-center mb-15"><u>Provided:</u></h5>
+                                    <li class="fw-medium text-black d-flex align-items-center"><span class="d-inline-block search-item-selected me-12 bg-black mt-0 border-0" style="width: 12px; height: 12px;"></span>Leased trailers.</li>
+                                    <li class="fw-medium text-black d-flex align-items-center"><span class="d-inline-block search-item-selected me-12 bg-black mt-0 border-0" style="width: 12px; height: 12px;"></span>Service work.</li>
+                                    <li class="fw-medium text-black d-flex align-items-center"><span class="d-inline-block search-item-selected me-12 bg-black mt-0 border-0" style="width: 12px; height: 12px;"></span>Production routes.</li>
+                                    <li class="fw-medium text-black d-flex align-items-center"><span class="d-inline-block search-item-selected me-12 bg-black mt-0 border-0" style="width: 12px; height: 12px;"></span>24<sup>hr</sup> Dispatch.</li>
+                                    <li class="fw-medium text-black d-flex align-items-center"><span class="d-inline-block search-item-selected me-12 bg-black mt-0 border-0" style="width: 12px; height: 12px;"></span>Factoring <span class="text-danger fw-normal">(5%)</span>.</li>
+                                </ul>
+                            </div>
+                            <div class="mt-20">
+                                <h4 class="text-black fs-20 fw-bold text-center"><u>Notes:</u></h4>
+                                <p class="text-black fs-12 requirement-descriptioin mx-auto mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                    Facere repellendus doloribus provident iusto, autem natus quos.
+                                    Expedita dolor debitis ullam iure nostrum consequuntur.</p>
+                            </div>
+                        </div>  
+                    </div>                
+                    <div class="maddie-bottom-bar requirement-footer border-top-0">
+                        <p class="mb-0 text-black fs-18 text-center fst-italic">
+                            <u>Dispatched out of williston</u>
+                            <span class="text-danger fw-normal d-block fs-14 mt-5">(661) 345-2345</span>
+                        </p>                        
+                        <button type="button" class="btn text-white">Request</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Requirement Modal End -->
 
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta3/css/bootstrap-select.min.css">
